Use Double.vaueOf instead of new Double.